--- a/index.html
+++ b/index.html
@@ -21,40 +21,39 @@
 <body>
   <div class="container">
     <div class="row">
-
-      <div type="button" id="green" class="btn green">
-        <h1>G</h1>
-      </div>
-
-      <div type="button" id="red" class="btn red">
-        <h1>R<h1>
+      <div class="btn-container">
+        <div type="button" id="green" class="btn green">
+          <h1>G</h1>
+        </div>
+        <div type="button" id="red" class="btn red">
+          <h1>R</h1>
+        </div>
       </div>
     </div>
-
     <div class="row">
-
-      <div type="button" id="yellow" class="btn yellow">
-        <h1>Y</h1>
+      <div class="btn-container">
+        <div type="button" id="yellow" class="btn yellow">
+          <h1>Y</h1>
+        </div>
+        <div type="button" id="blue" class="btn blue">
+          <h1>B</h1>
+        </div>
       </div>
-      <div type="button" id="blue" class="btn blue">
-        <h1>B</h1>
-      </div>
-      <div class="row">
-
+    </div>
+    <div class="row">
+      <div class="btn-container">
         <div type="button" id="grey" class="btn grey">
           <h1>Gr</h1>
         </div>
         <div type="button" id="violet" class="btn violet">
-          <h1>v</h1>
-      
+          <h1>V</h1>
         </div>
-
+      </div>
     </div>
   </div>
   <h1 id="level-title">Press Any Key to Start</h1>
-  
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="simon.js" charset="utf-8"></script>
 </body>
+
 </html>
